--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -49,7 +49,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 139,
+      "execution_count": 155,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "760c289e-2c6a-41d4-c89d-c5be08842dc7",
+        "outputId": "6ca421d4-1644-4a6f-9f63-efce9e8b2b41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -75,7 +75,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 140,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "x = np.array(x)\n",
         "y = data1.iloc [:,2].values"
       ],
-      "execution_count": 144,
+      "execution_count": 157,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
         "id": "nmeZH3I84EtO"
       },
       "source": [
-        "pd.DataFrame(x)"
+        "##pd.DataFrame(x)"
       ],
       "execution_count": null,
       "outputs": []
@@ -197,7 +197,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size= 0.2, random_state=0)"
       ],
-      "execution_count": 148,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
         "x_train= sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train.reshape(-1,1))"
       ],
-      "execution_count": 151,
+      "execution_count": 161,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "id": "Elnz3K6k62oQ"
       },
       "source": [
-        "x_train=np.append(arr=np.ones((len(x_train[:,0]),1)).astype(int),values=x_train,axis=1)"
+        "##x_train=np.append(arr=np.ones((len(x_train[:,0]),1)).astype(int),values=x_train,axis=1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -280,212 +280,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IFbdKOGNqD-T",
-        "outputId": "bee1cb5d-1117-4832-cd32-4156866b211f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "IFbdKOGNqD-T"
       },
       "source": [
-        "pd.DataFrame(x_train)"
+        "##pd.DataFrame(x_train)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "      <th>5</th>\n",
-              "      <th>6</th>\n",
-              "      <th>7</th>\n",
-              "      <th>8</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>2.402464</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>-0.467288</td>\n",
-              "      <td>1.450313</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>1.372223</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>0.095942</td>\n",
-              "      <td>-0.283268</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>1.372223</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>0.625236</td>\n",
-              "      <td>-0.283268</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>2.402464</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>-0.685855</td>\n",
-              "      <td>1.450313</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>1.204827</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>0.122718</td>\n",
-              "      <td>-1.438989</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31633</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>1.372223</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>1.650508</td>\n",
-              "      <td>-0.861129</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31634</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>-0.458882</td>\n",
-              "      <td>-1.438989</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31635</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>1.204827</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>-0.619538</td>\n",
-              "      <td>0.872453</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31636</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>-0.829995</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>2.402464</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>-0.782996</td>\n",
-              "      <td>1.450313</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>31637</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>-0.014876</td>\n",
-              "      <td>1.204827</td>\n",
-              "      <td>-0.728744</td>\n",
-              "      <td>-0.005622</td>\n",
-              "      <td>-0.416239</td>\n",
-              "      <td>-0.026379</td>\n",
-              "      <td>-0.655654</td>\n",
-              "      <td>-0.861129</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>31638 rows × 9 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "         0         1         2  ...         6         7         8\n",
-              "0      1.0 -0.014876 -0.829995  ... -0.026379 -0.467288  1.450313\n",
-              "1      1.0 -0.014876 -0.829995  ... -0.026379  0.095942 -0.283268\n",
-              "2      1.0 -0.014876 -0.829995  ... -0.026379  0.625236 -0.283268\n",
-              "3      1.0 -0.014876 -0.829995  ... -0.026379 -0.685855  1.450313\n",
-              "4      1.0 -0.014876  1.204827  ... -0.026379  0.122718 -1.438989\n",
-              "...    ...       ...       ...  ...       ...       ...       ...\n",
-              "31633  1.0 -0.014876 -0.829995  ... -0.026379  1.650508 -0.861129\n",
-              "31634  1.0 -0.014876 -0.829995  ... -0.026379 -0.458882 -1.438989\n",
-              "31635  1.0 -0.014876  1.204827  ... -0.026379 -0.619538  0.872453\n",
-              "31636  1.0 -0.014876 -0.829995  ... -0.026379 -0.782996  1.450313\n",
-              "31637  1.0 -0.014876  1.204827  ... -0.026379 -0.655654 -0.861129\n",
-              "\n",
-              "[31638 rows x 9 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 69
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -493,7 +294,7 @@
         "id": "um6qq4xg9qX9"
       },
       "source": [
-        "import statsmodels.api as sm\n",
+        "'''import statsmodels.api as sm\n",
         "def elimnaAtras (x,SL):\n",
         "  numvar = len(x[0])\n",
         "  for i in range(0 , numvar):\n",
@@ -507,7 +308,7 @@
         "  return x\n",
         "SL=0.05\n",
         "x_opt = x[:,[0,1,2,3,4,5,6,7]]        \n",
-        "x_modelo = elimnaAtras(x_opt, SL)"
+        "x_modelo = elimnaAtras(x_opt, SL)'''"
       ],
       "execution_count": null,
       "outputs": []
@@ -515,164 +316,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BSfzmrR-7FeO",
-        "outputId": "84d27dc1-b79c-471d-9446-ca0134a3e8de",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        }
+        "id": "BSfzmrR-7FeO"
       },
       "source": [
-        "pd.DataFrame(x_modelo)"
+        "##pd.DataFrame(x_modelo)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "      <th>3</th>\n",
-              "      <th>4</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>18078</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>17986</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>17952</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>95</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>369</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39543</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1104</td>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39544</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>10271</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39545</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>8872</td>\n",
-              "      <td>5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39546</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1790</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>39547</th>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2544</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>39548 rows × 5 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "       0  1  2      3  4\n",
-              "0      0  1  0  18078  6\n",
-              "1      0  1  0  17986  3\n",
-              "2      0  1  0  17952  2\n",
-              "3      1  0  0     95  5\n",
-              "4      1  0  0    369  2\n",
-              "...   .. .. ..    ... ..\n",
-              "39543  0  0  0   1104  6\n",
-              "39544  0  1  0  10271  2\n",
-              "39545  0  1  0   8872  5\n",
-              "39546  0  0  1   1790  3\n",
-              "39547  1  0  0   2544  2\n",
-              "\n",
-              "[39548 rows x 5 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 71
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
