--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -330,21 +330,48 @@
         "id": "Fow-3bkhjOVu"
       },
       "source": [
-        "### MODELO REGRESION POLINOMICA"
+        "### MODELO SOPORTE VECTORIAL"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tDBqCWkfjVjY"
+        "id": "tDBqCWkfjVjY",
+        "outputId": "9ec2a341-5adb-4fd3-9ad4-c33841da12e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
       },
       "source": [
         "from sklearn.svm import SVR\n",
         "regression = SVR(kernel='rbf', C=1.0, epsilon= 0.2)\n",
-        "regression.fit(x_modelo[:,0:4],y_train)"
+        "regression.fit(x_train,y_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.2, gamma='scale',\n",
+              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 165
+        }
+      ]
     },
     {
       "cell_type": "code",
