--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -376,22 +376,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cJGhr6hwqMhM"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "cQ8W4hTf8Cjm"
       },
       "source": [
-        "x_valor=sc_x.inverse_transform(muestra)\n",
-        "y_valor= sc_y.inverse_transform(y_muestra)\n",
+        "x_valor=sc_x.inverse_transform(x_train)\n",
+        "y_valor= sc_y.inverse_transform(y_train)\n",
         "y_predic_valor= sc_y.inverse_transform(regression.predict(muestra.reshape(-1,1)))"
       ],
       "execution_count": null,
