--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -381,9 +381,9 @@
       "source": [
         "x_valor=sc_x.inverse_transform(x_train)\n",
         "y_valor= sc_y.inverse_transform(y_train)\n",
-        "y_predic_valor= sc_y.inverse_transform(regression.predict(muestra.reshape(-1,1)))"
+        "y_predic_valor= sc_y.inverse_transform(regression.predict(x_train))"
       ],
-      "execution_count": null,
+      "execution_count": 167,
       "outputs": []
     },
     {
