--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -389,6 +389,41 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CPBCDc7zy7Eg"
+      },
+      "source": [
+        "# importamos las librerias necesarias\n",
+        "from mpl_toolkits.mplot3d import axes3d\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Creamos la figura\n",
+        "fig = plt.figure()\n",
+        "# Creamos el plano 3D\n",
+        "ax1 = fig.add_subplot(111, projection='3d')\n",
+        "\n",
+        "# Definimos los datos de prueba\n",
+        "x = [1,2,3,4,5,6,7,8,9,10]\n",
+        "y = [5,6,7,8,2,5,6,3,7,2]\n",
+        "z = [1,2,6,3,2,7,3,3,7,2]\n",
+        "\n",
+        "# Datos adicionales\n",
+        "x2 = [-1,-2,-3,-4,-5,-6,-7,-8,-9,-10]\n",
+        "y2 = [-5,-6,-7,-8,-2,-5,-6,-3,-7,-2]\n",
+        "z2 = [1,2,6,3,2,7,3,3,7,2]\n",
+        "\n",
+        "# Agregamos los puntos en el plano 3D\n",
+        "ax1.scatter(x, y, z, c='g', marker='o')\n",
+        "ax1.scatter(x2, y2, z2, c ='r', marker='o')\n",
+        "\n",
+        "# Mostramos el gráfico\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_QIoRMbsqGwI"
       },
       "source": [
