--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -41,6 +41,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "from mpl_toolkits.mplot3d import axes3d\n",
         "import matplotlib.pyplot as plt\n",
         "import gspread\n",
         "from oauth2client.client import GoogleCredentials \n",
@@ -392,9 +393,8 @@
         "id": "CPBCDc7zy7Eg"
       },
       "source": [
+        "# GRAFICO 3D DATOS ENTRENAMIENTO\n",
         "# importamos las librerias necesarias\n",
-        "from mpl_toolkits.mplot3d import axes3d\n",
-        "import matplotlib.pyplot as plt\n",
         "\n",
         "# Creamos la figura\n",
         "fig = plt.figure()\n",
@@ -428,13 +428,13 @@
       },
       "source": [
         "xx = []; yy = []; yy_predic=[]\n",
-        "ciclo= len(muestra)\n",
+        "ciclo= len(x_train)\n",
         "for i in range(ciclo):\n",
-        "  xx.append([x_valor[i]])\n",
-        "  yy.append([y_valor[i]])\n",
+        "  xx.append([x_train[i]])\n",
+        "  yy.append([y_train[i]])\n",
         "  yy_predic.append([y_predic_valor[i]])\n",
-        "print(\"x_valor = \"+str(xx)+\"\\n\")\n",
-        "print(\"y_valor = \"+str(yy)+\"\\n\")\n",
+        "print(\"x_train = \"+str(xx)+\"\\n\")\n",
+        "print(\"y_train = \"+str(yy)+\"\\n\")\n",
         "print(\"y_predic\"+str(yy_predic)+\"\\n\")\n",
         "# Concatenamos \n",
         "tabla = np.concatenate((xx, yy,yy_predic), axis=1)\n",
@@ -444,9 +444,9 @@
         "for i in range(ciclo):\n",
         "  n_orgz =  tabla[i,0]\n",
         "  for ii in range(ciclo):\n",
-        "    n_norgz =  x_valor[ii]\n",
+        "    n_norgz =  x_train[ii]\n",
         "    if (int(n_norgz) == int(n_orgz)):\n",
-        "      tabla[i,1] = y_valor[ii]\n",
+        "      tabla[i,1] = y_train[ii]\n",
         "      tabla[i,2]= y_predic_valor[ii]\n",
         "    else:\n",
         "      pass \n",
