--- a/Regresión/Regresion_Bajas_Antiguedad.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad.ipynb
@@ -755,19 +755,12 @@
         "# Creamos el plano 3D\n",
         "ax1 = fig.add_subplot(111, projection='3d')\n",
         "\n",
-        "# Definimos los datos de prueba\n",
-        "x = [1,2,3,4,5,6,7,8,9,10]\n",
-        "y = [5,6,7,8,2,5,6,3,7,2]\n",
-        "z = [1,2,6,3,2,7,3,3,7,2]\n",
-        "\n",
-        "# Datos adicionales\n",
-        "x2 = [-1,-2,-3,-4,-5,-6,-7,-8,-9,-10]\n",
-        "y2 = [-5,-6,-7,-8,-2,-5,-6,-3,-7,-2]\n",
-        "z2 = [1,2,6,3,2,7,3,3,7,2]\n",
+        "x = x_valor\n",
+        "y = y_valor\n",
+        "z = y_predic_valor\n",
         "\n",
         "# Agregamos los puntos en el plano 3D\n",
         "ax1.scatter(x, y, z, c='g', marker='o')\n",
-        "ax1.scatter(x2, y2, z2, c ='r', marker='o')\n",
         "\n",
         "# Mostramos el gráfico\n",
         "plt.show()"
